# python-json

./: .pre-commit-config.yaml  LICENSE  README.md  create_json.py  pyproject.toml
notebooks/: sample_01_basic.ipynb  sample_02_pandas.ipynb  sample_03_pydantic.ipynb
